// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Overall command > when incrementing overall stats > should increment them until latest finalized block 1`] = `
[
  {
    "avgBlobAsCalldataFee": 21000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 5505024,
    "avgBlobGasPrice": 21,
    "avgBlobMaxFee": 26214400,
    "avgMaxBlobGasFee": 100,
    "category": null,
    "rollup": null,
    "totalBlobAsCalldataFee": "84000",
    "totalBlobAsCalldataGasUsed": "4000",
    "totalBlobAsCalldataMaxFees": "400000",
    "totalBlobFee": "22020096",
    "totalBlobGasPrice": "84",
    "totalBlobGasUsed": "1048576",
    "totalBlobMaxFees": "104857600",
    "totalBlobMaxGasFees": "400",
    "totalBlobSize": 9400n,
    "totalBlobs": 8,
    "totalBlocks": 3,
    "totalTransactions": 4,
    "totalUniqueBlobs": 1,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 21000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 2752512,
    "avgBlobGasPrice": 21,
    "avgBlobMaxFee": 13107200,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "rollup": null,
    "totalBlobAsCalldataFee": "42000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobAsCalldataMaxFees": "200000",
    "totalBlobFee": "5505024",
    "totalBlobGasPrice": "42",
    "totalBlobGasUsed": "262144",
    "totalBlobMaxFees": "26214400",
    "totalBlobMaxGasFees": "200",
    "totalBlobSize": 2500n,
    "totalBlobs": 2,
    "totalBlocks": 2,
    "totalTransactions": 2,
    "totalUniqueBlobs": 1,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 21000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 8257536,
    "avgBlobGasPrice": 21,
    "avgBlobMaxFee": 39321600,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "rollup": null,
    "totalBlobAsCalldataFee": "42000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobAsCalldataMaxFees": "200000",
    "totalBlobFee": "16515072",
    "totalBlobGasPrice": "42",
    "totalBlobGasUsed": "786432",
    "totalBlobMaxFees": "78643200",
    "totalBlobMaxGasFees": "200",
    "totalBlobSize": 6900n,
    "totalBlobs": 6,
    "totalBlocks": 2,
    "totalTransactions": 2,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 21000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 8257536,
    "avgBlobGasPrice": 21,
    "avgBlobMaxFee": 39321600,
    "avgMaxBlobGasFee": 100,
    "category": null,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "42000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobAsCalldataMaxFees": "200000",
    "totalBlobFee": "16515072",
    "totalBlobGasPrice": "42",
    "totalBlobGasUsed": "786432",
    "totalBlobMaxFees": "78643200",
    "totalBlobMaxGasFees": "200",
    "totalBlobSize": 6900n,
    "totalBlobs": 6,
    "totalBlocks": 2,
    "totalTransactions": 2,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
]
`;

exports[`Overall command > when incrementing overall stats > should increment them until latest indexed block when target block 'latest' is provided 1`] = `
[
  {
    "avgBlobAsCalldataFee": 21200,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 4980736,
    "avgBlobGasPrice": 21.2,
    "avgBlobMaxFee": 23592960,
    "avgMaxBlobGasFee": 100,
    "category": null,
    "rollup": null,
    "totalBlobAsCalldataFee": "106000",
    "totalBlobAsCalldataGasUsed": "5000",
    "totalBlobAsCalldataMaxFees": "500000",
    "totalBlobFee": "24903680",
    "totalBlobGasPrice": "106",
    "totalBlobGasUsed": "1179648",
    "totalBlobMaxFees": "117964800",
    "totalBlobMaxGasFees": "500",
    "totalBlobSize": 10400n,
    "totalBlobs": 9,
    "totalBlocks": 4,
    "totalTransactions": 5,
    "totalUniqueBlobs": 1,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 21333.33333333333,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 2796202.666666667,
    "avgBlobGasPrice": 21.33333333333333,
    "avgBlobMaxFee": 13107200,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "rollup": null,
    "totalBlobAsCalldataFee": "64000",
    "totalBlobAsCalldataGasUsed": "3000",
    "totalBlobAsCalldataMaxFees": "300000",
    "totalBlobFee": "8388608",
    "totalBlobGasPrice": "64",
    "totalBlobGasUsed": "393216",
    "totalBlobMaxFees": "39321600",
    "totalBlobMaxGasFees": "300",
    "totalBlobSize": 3500n,
    "totalBlobs": 3,
    "totalBlocks": 3,
    "totalTransactions": 3,
    "totalUniqueBlobs": 1,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 21000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 8257536,
    "avgBlobGasPrice": 21,
    "avgBlobMaxFee": 39321600,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "rollup": null,
    "totalBlobAsCalldataFee": "42000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobAsCalldataMaxFees": "200000",
    "totalBlobFee": "16515072",
    "totalBlobGasPrice": "42",
    "totalBlobGasUsed": "786432",
    "totalBlobMaxFees": "78643200",
    "totalBlobMaxGasFees": "200",
    "totalBlobSize": 6900n,
    "totalBlobs": 6,
    "totalBlocks": 2,
    "totalTransactions": 2,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 21000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 8257536,
    "avgBlobGasPrice": 21,
    "avgBlobMaxFee": 39321600,
    "avgMaxBlobGasFee": 100,
    "category": null,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "42000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobAsCalldataMaxFees": "200000",
    "totalBlobFee": "16515072",
    "totalBlobGasPrice": "42",
    "totalBlobGasUsed": "786432",
    "totalBlobMaxFees": "78643200",
    "totalBlobMaxGasFees": "200",
    "totalBlobSize": 6900n,
    "totalBlobs": 6,
    "totalBlocks": 2,
    "totalTransactions": 2,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
]
`;

exports[`Overall command > when incrementing overall stats > should increment until provided block number 1`] = `
[
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 5242880,
    "avgBlobGasPrice": 20,
    "avgBlobMaxFee": 26214400,
    "avgMaxBlobGasFee": 100,
    "category": null,
    "rollup": null,
    "totalBlobAsCalldataFee": "40000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobAsCalldataMaxFees": "200000",
    "totalBlobFee": "10485760",
    "totalBlobGasPrice": "40",
    "totalBlobGasUsed": "524288",
    "totalBlobMaxFees": "52428800",
    "totalBlobMaxGasFees": "200",
    "totalBlobSize": 4000n,
    "totalBlobs": 4,
    "totalBlocks": 1,
    "totalTransactions": 2,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 2621440,
    "avgBlobGasPrice": 20,
    "avgBlobMaxFee": 13107200,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "rollup": null,
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobAsCalldataMaxFees": "100000",
    "totalBlobFee": "2621440",
    "totalBlobGasPrice": "20",
    "totalBlobGasUsed": "131072",
    "totalBlobMaxFees": "13107200",
    "totalBlobMaxGasFees": "100",
    "totalBlobSize": 1000n,
    "totalBlobs": 1,
    "totalBlocks": 1,
    "totalTransactions": 1,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 7864320,
    "avgBlobGasPrice": 20,
    "avgBlobMaxFee": 39321600,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "rollup": null,
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobAsCalldataMaxFees": "100000",
    "totalBlobFee": "7864320",
    "totalBlobGasPrice": "20",
    "totalBlobGasUsed": "393216",
    "totalBlobMaxFees": "39321600",
    "totalBlobMaxGasFees": "100",
    "totalBlobSize": 3000n,
    "totalBlobs": 3,
    "totalBlocks": 1,
    "totalTransactions": 1,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobAsCalldataMaxFee": 100000,
    "avgBlobFee": 7864320,
    "avgBlobGasPrice": 20,
    "avgBlobMaxFee": 39321600,
    "avgMaxBlobGasFee": 100,
    "category": null,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobAsCalldataMaxFees": "100000",
    "totalBlobFee": "7864320",
    "totalBlobGasPrice": "20",
    "totalBlobGasUsed": "393216",
    "totalBlobMaxFees": "39321600",
    "totalBlobMaxGasFees": "100",
    "totalBlobSize": 3000n,
    "totalBlobs": 3,
    "totalBlocks": 1,
    "totalTransactions": 1,
    "totalUniqueBlobs": 0,
    "totalUniqueReceivers": 0,
    "totalUniqueSenders": 0,
  },
]
`;
